--- a/store.html
+++ b/store.html
@@ -12,36 +12,25 @@
   body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
   .hero {
     background: url('pawnshop-front.png') center/cover no-repeat;
-    color:yellow;
+    color:white;
     padding:100px 20px;
   }
-  .hero h1 {font-size:48px;font-weight:bold;text-shadow:2px 2px 6px #000;color:yellow !important;}
-  .hero p {font-size:20px;text-shadow:1px 1px 4px #000;}
-  .section-title {margin-top:30px; border-bottom:2px solid #ccc; padding-bottom:10px;}
+  .hero h1 {font-size:48px; font-weight:bold; text-shadow:2px 2px 6px #000;}
+  .hero p {font-size:20px; text-shadow:1px 1px 4px #000;}
   .footer {background:#222; color:#ccc; padding:20px; text-align:center;}
   .footer a {color:#fff; text-decoration:none; margin:0 5px;}
   .navbar {position:sticky; top:0; z-index:1000;}
-  .price {color:#e67e22; font-weight:bold;}
-  .social-icons i {margin:0 8px; font-size:20px;}
-
-  .products-grid {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-    gap: 20px;
-    margin: 20px 0;
-  }
-  .product-card {
-    background: #fff;
-    border-radius: 8px;
-    box-shadow: 0 2px 6px rgba(0,0,0,0.15);
-    padding: 15px;
-    text-align: center;
-  }
-  .product-card img {
+  .product img {
     max-width: 100%;
     height: auto;
+    min-width: 200px;
+    display: block;
+    margin: 0 auto;
     border-radius: 6px;
   }
+  .product {margin-bottom:20px;}
+  .price {color:#e67e22; font-weight:bold;}
+  .social-icons i {margin:0 8px; font-size:20px;}
 </style>
 </head>
 <body class="w3-light-grey">
@@ -59,8 +48,11 @@
   <p>Browse our inventory and shop with confidence</p>
 </header>
 
-<!-- Main Content -->
-<div id="main-content" class="w3-content" style="max-width:1200px"></div>
+<div class="w3-content" style="max-width:1200px">
+  <div class="w3-row-padding w3-margin-top product-container">
+    <!-- Products will be injected here by JavaScript -->
+  </div>
+</div>
 
 <!-- Footer -->
 <footer class="footer">
@@ -79,62 +71,55 @@
 </footer>
 
 <script>
-const products = [
-  {id:1, name:"Oled Nintendo Switch with White Controllers", image:"product1.jpg", price:225, description:"Includes Joy-Cons and charger.", buyLink:"PLACE_SQUARE_LINK_HERE"},
-  {id:2, name:"Dual Sense Edge Playstation Controller", image:"product2.jpg", price:150, description:"Customizable PS5 controller.", buyLink:"PLACE_SQUARE_LINK_HERE"},
-  {id:3, name:"Dewalt Combo Kit", image:"product3.jpg", price:150, description:"Drill + impact driver combo.", buyLink:"PLACE_SQUARE_LINK_HERE"},
-  {id:4, name:"NutriBullet", image:"product4.jpg", price:110, description:"Never opened, 900W.", buyLink:"PLACE_SQUARE_LINK_HERE"},
-  {id:5, name:"Rog Ally X", image:"product5.jpg", price:799.99, description:"Handheld gaming PC.", buyLink:"PLACE_SQUARE_LINK_HERE"},
-  {id:6, name:"Xbox Series S With Controller", image:"product6.jpg", price:275, description:"512GB with controller.", buyLink:"PLACE_SQUARE_LINK_HERE"},
-  {id:7, name:"ASUS TUF Gaming Laptop", image:"product7.JPG", price:629, description:"15.6”, Ryzen 7, RTX GPU.", buyLink:"PLACE_SQUARE_LINK_HERE"},
-  {id:8, name:"1991 Classic Major League Baseball Trivia Boardgame Series 2", image:"product8.JPG", price:50, description:"Vintage trivia board game.", buyLink:"PLACE_SQUARE_LINK_HERE"},
-  {id:9, name:"Nintendo Switch Classic Color Controllers", image:"product9.jpg", price:229.95, description:"Classic Nintendo Switch with included Carry Case", buyLink:"PLACE_SQUARE_LINK_HERE"},
-  {id:10, name:"Apple Airpod Pro Max", image:"product10.jpg", price:229.95, description:"Apple Airpods Pro Max", buyLink:"PLACE_SQUARE_LINK_HERE"}
-];
+document.addEventListener("DOMContentLoaded", function() {
+  const products = [
+    {name:"Oled Nintendo Switch with White Controllers", image:"product1.jpg", price:225, buyLink:"PLACE_SQUARE_LINK_HERE"},
+    {name:"Dual Sense Edge Playstation Controller", image:"product2.jpg", price:150, buyLink:"PLACE_SQUARE_LINK_HERE"},
+    {name:"Dewalt Combo Kit", image:"product3.jpg", price:150, buyLink:"PLACE_SQUARE_LINK_HERE"},
+    {name:"NutriBullet", image:"product4.jpg", price:110, buyLink:"PLACE_SQUARE_LINK_HERE"},
+    {name:"Rog Ally X", image:"product5.jpg", price:799.99, buyLink:"PLACE_SQUARE_LINK_HERE"},
+    {name:"Xbox Series S With Controller", image:"product6.jpg", price:275, buyLink:"PLACE_SQUARE_LINK_HERE"},  
+    {name:"ASUS TUFF Gaming Laptop", image:"product7.jpg", price:629, buyLink:"PLACE_SQUARE_LINK_HERE"},        
+    {name:"1991 Classic Major League Baseball Trivia Boardgame Series 2", image:"product8.jpg", price:50, buyLink:"PLACE_SQUARE_LINK_HERE"}
+  ];
 
-document.addEventListener("DOMContentLoaded", () => {
-  const container = document.getElementById("main-content");
-  const params = new URLSearchParams(window.location.search);
-  const id = params.get("id");
+  const container = document.querySelector(".product-container");
 
-  if (id) {
-    const product = products.find(p => p.id === parseInt(id, 10));
-    if (!product) {
-      container.innerHTML = "<p>Product not found.</p>";
-      return;
-    }
-    container.innerHTML = `
-      <div class="w3-card w3-padding w3-margin w3-white">
-        <img src="${product.image}" alt="${product.name}" style="max-width:300px;display:block;margin:auto;">
-        <h2>${product.name}</h2>
-        <p class="price">$${product.price}</p>
-        <p>${product.description}</p>
+  products.forEach(p => {
+    const div = document.createElement("div");
+    div.className = "w3-col l3 m6 s12 product";
+    div.innerHTML = `
+      <img src="${p.image}" alt="${p.name}">
+      <h4>${p.name}</h4>
+      <p class="price">$${p.price}</p>
 
-        <!-- Buy Now Button placeholder -->
-        <div style="padding:20px;">
-          <a target="_blank" href="${product.buyLink}" style="
-            display:inline-block;
-            font-size:18px;
-            line-height:48px;
-            height:48px;
-            color:#ffffff;
-            min-width:212px;
-            background-color:#006aff;
-            text-align:center;
-            border-radius:6px;
-          ">Buy now</a>
-        </div>
+      <!-- Buy Now Form (Email fallback) -->
+      <form method="POST" action="mailto:CoutureOnline15@gmail.com" enctype="text/plain">
+        <input type="hidden" name="Product" value="${p.name}">
+        <p><label>Name:<br><input type="text" name="Name" required></label></p>
+        <p><label>Email:<br><input type="email" name="Email" required></label></p>
+        <button type="submit" class="w3-button w3-black w3-small">Order Now</button>
+      </form>
 
-        <p><a href="store.html" class="w3-button w3-grey">Back to Store</a></p>
+      <!-- Square Buy Now Button placeholder -->
+      <div style="padding:10px; text-align:center;">
+        <a target="_blank" href="${p.buyLink}" style="
+          display:inline-block;
+          font-size:16px;
+          line-height:40px;
+          height:40px;
+          color:#ffffff;
+          min-width:180px;
+          background-color:#006aff;
+          text-align:center;
+          border-radius:6px;
+        ">Buy Now</a>
       </div>
     `;
-  } else {
-    const grid = document.createElement("div");
-    grid.className = "products-grid";
+    container.appendChild(div);
+  });
+});
+</script>
 
-    products.forEach(p => {
-      const div = document.createElement("div");
-      div.className = "product-card";
-      div.innerHTML = `
-        <a href="store.html?id=${p.id}">
-          <img src="${p.i
+</body>
+</html>
