--- a/store.html
+++ b/store.html
@@ -136,7 +136,7 @@ const products = [
     border-radius: 0px;
   ">Buy now</a>
   </div>
-</div>"
+</div>
 `
 },
   
@@ -167,7 +167,7 @@ const products = [
     border-radius: 0px;
   ">Buy now</a>
   </div>
-</div>"
+</div>
 `
 },
                           
@@ -199,6 +199,7 @@ const products = [
 
 </body>
 </html>
+
 
 
 
