--- a/store.html
+++ b/store.html
@@ -80,8 +80,7 @@ const products = [
     name: "Oled Nintendo Switch with White Controllers",
     image: "product1.jpg",
     price: 225,
-    buyEmbed: `
-<div style="
+    buyEmbed: `<div style="
   overflow: auto;
   display: flex;
   flex-direction: column;
@@ -93,20 +92,20 @@ const products = [
   box-shadow: -2px 10px 5px rgba(0, 0, 0, 0);
   border-radius: 10px;
   font-family: SQ Market, SQ Market, Helvetica, Arial, sans-serif;
-">
+  ">
   <div style="padding: 20px;">
-    <a target="_blank" href="https://square.link/u/TWHhxps5" style="
-      display: inline-block;
-      font-size: 18px;
-      line-height: 48px;
-      height: 48px;
-      color: #ffffff;
-      min-width: 212px;
-      background-color: #006aff;
-      text-align: center;
-      box-shadow: 0 0 0 1px rgba(0,0,0,.1) inset;
-      border-radius: 6px;
-    ">Buy now</a>
+    <a target="_blank" href="https://square.link/u/TWHhxps5?src=embed" style="
+    display: inline-block;
+    font-size: 18px;
+    line-height: 48px;
+    height: 48px;
+    color: #000000;
+    min-width: 212px;
+    background-color: #ffbf00;
+    text-align: center;
+    box-shadow: 0 0 0 1px rgba(0,0,0,.1) inset;
+    border-radius: 0px;
+  ">Buy now</a>
   </div>
 </div>
 `
@@ -261,6 +260,7 @@ const products = [
 
 </body>
 </html>
+
 
 
 
